@@ -39,7 +39,7 @@ public interface CombatLibrary extends CMLibrary
 	public Set<MOB> properTargets(Ability A, MOB caster, boolean beRuthless);
 	public int adjustedArmor(MOB mob);
 	public int adjustedAttackBonus(MOB mob, MOB target);
-	public int adjustedDamage(MOB mob, Weapon weapon, MOB target);
+	public int adjustedDamage(MOB mob, Weapon weapon, MOB target, int bonusDamage, boolean allowCrits);
 	public boolean rollToHit(MOB attacker, MOB defender);
 	public boolean rollToHit(int attack, int defence, int adjustment);
 	public Set<MOB> allCombatants(MOB mob);
